Privatized getNotes and added logout

--- a/views/partials/ajaxUpdater.js.ejs
+++ b/views/partials/ajaxUpdater.js.ejs
@@ -1,4 +1,4 @@
-﻿<script type="text/javascript">
+<script type="text/javascript">
 
     function escapeHtml(str) {
         var div = document.createElement('div');
@@ -26,7 +26,7 @@
                 var theJson = {
                     clientId: currentClientViewID,
                     message: data,
-                    messageField: dirtyControl.element.getId()    //id of orig element = database field in clientTable
+                    messageField: dirtyControl.element.getId()    //id of orig element = database field in client
                 };
 
                 $.ajax({
