--- a/views/pages/home2.ejs
+++ b/views/pages/home2.ejs
@@ -59,8 +59,8 @@
     <script type="text/javascript">
 
         // ID of client current active
-        var currentClientViewID = <%= clientInfo.clientId %>;
-        var userID = <%= userID %>;
+        var currentClientViewId = <%= clientInfo.clientId %>;
+        var userId = <%= userId %>;
         $('#myTabs li a').click(function (e) {
             e.preventDefault()
             $(this).tab('show')
