--- a/views/pages/index2.ejs
+++ b/views/pages/index2.ejs
@@ -42,7 +42,7 @@
            odd = !odd;
       %>
           <div class="row" style='background-color: <%= bgc %>;'>
-            <div class="col-sm-1"><%= row.noteID %></div>
+            <div class="col-sm-1"><%= row.noteId %></div>
             <div class="col-sm-7"><%= row.noteText %></div>
             <div class="col-sm-4"><%= row.itemUpdateTimeStamp %></div>
           </div>
