--- a/views/partials/ajaxUpdater.js.ejs
+++ b/views/partials/ajaxUpdater.js.ejs
@@ -24,7 +24,7 @@
             data = data.replace(/[\r\n]/g, '');
 
                 var theJson = {
-                    clientId: currentClientViewID,
+                    clientId: currentClientViewId,
                     message: data,
                     messageField: dirtyControl.element.getId()    //id of orig element = database field in client
                 };
