--- a/views/partials/headSection.ejs
+++ b/views/partials/headSection.ejs
@@ -1,4 +1,5 @@
     <link href="/public/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <link href="/public/css/bootstrap-modal-bs3patch.css" rel="stylesheet">
     <link href="/public/css/bootstrap-modal.css" rel="stylesheet">
     <link href="/public/css/animate.css" rel="stylesheet">
@@ -6,3 +7,4 @@
     <link href="/public/css/typeaheadjs.css" rel="stylesheet">
     <link href="/public/jstree/themes/default/style.css" rel="stylesheet" />
     <link href="/public/css/lotl.css" rel="stylesheet">
+    <script src="/public/js/jquery.js"></script>
