--- a/views/partials/noteEditor.js.ejs
+++ b/views/partials/noteEditor.js.ejs
@@ -5,7 +5,7 @@
 
     // Unique ID for all iterations of this message. Will be assigned a non-zero value
     // by the server when this message is saved the first time.
-    var currentMessageID = 0;
+    var currentMessageId = 0;
 
     var saveIfChanged = function () {
         if (theEditor.checkDirty()) {
@@ -15,19 +15,19 @@
 
             var theJson = {
                 message: data,
-                messageID: currentMessageID,
-                clientID: currentClientViewID
+                messageId: currentMessageId,
+                clientId: currentClientViewId
             };
 
             $.ajax({
                 type: 'POST', // define the type of HTTP verb we want to use
-                url: '/api/save_message', // the url where we want to POST
+                url: '/api/save_message?Auth=' + authToken, // the url where we want to POST
                 data: JSON.stringify(theJson),
                 contentType: 'application/json; charset=UTF-8',
                 dataType: 'json', // what type of data do we expect back from the server
                 encode: true,
                 success: function (res) {
-                    currentMessageID = res.message;
+                    currentMessageId = res.message;
                     var ret = $.parseJSON(JSON.stringify(res));
 
                     pinkness = false;
